fix z-index stacking for dropdown menu items

--- a/css/07-sub-header.less
+++ b/css/07-sub-header.less
@@ -1,9 +1,9 @@
 @import "variables.less";
+// NOTE z-index must be above floating section anchor, which is 1001
 
 .sub-header {
   font-family: "OpenSans", Helvetica, Arial, sans-serif;
-  // NOTE z-index must be above floating section anchor, which is 1001
-  z-index: 1002;
+  z-index: 1010;
   top: 0;
 
   .search-box {
@@ -160,7 +160,7 @@
       &.helpful {
         position: relative;
         .dropdown-toggle {
-          z-index: 1002;
+          z-index: 1010;
         }
         .dropdown-menu {
           left: -68px;
