--- a/css/10-header.less
+++ b/css/10-header.less
@@ -1,4 +1,5 @@
 @import "variables";
+// NOTE z-index must be above sub-header, which is 1010
 
 @headerHeight: 80px;
 @menuWidth: 260px;
@@ -28,7 +29,7 @@ body:before {
   opacity: 0.7;
   position: absolute;
   width: 100%;
-  z-index: 2;
+  z-index: 1020;
 }
 
 body.off-canvas--active:before {
@@ -38,7 +39,7 @@ body.off-canvas--active:before {
 .header {
   background-color: @mulesoft-header-bg-color;
   position: relative;
-  z-index: 3;
+  z-index: 1021;
 }
 
 .header__logo {
@@ -65,7 +66,7 @@ body.off-canvas--active:before {
     position: fixed;
     top: 0;
     width: @menuWidth;
-    z-index: 1002;
+    z-index: 1021;
   }
 }
 
@@ -102,7 +103,7 @@ body.off-canvas--active:before {
 
   @media (min-width: @menuBreakpointPlusOne) {
     position: relative;
-    z-index: 3;
+    z-index: 1021;
 
     // depth = 0
     &[data-depth="0"] {
@@ -159,7 +160,7 @@ body.off-canvas--active:before {
       position: absolute;
       top: 0;
       width: 100%;
-      z-index: 2;
+      z-index: 1020;
     }
   }
 }
